Nimam blage veze kaj se dogaja, upsi.
Signed-off-by: ernestsmotlak <ernestsmotlak@gmail.com>

--- a/DinToEur/Base.lproj/Main.storyboard
+++ b/DinToEur/Base.lproj/Main.storyboard
@@ -65,7 +65,7 @@
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                         </subviews>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY" colorLabel="IBBuiltInLabel-Red"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
                     <connections>
